force-app/main/default/objects/Generic_Configuration_Reference__mdt/Generic_Configuration_Reference__mdt.object-meta.xml
<CustomObject>
    <description>Generic custom metadata type to be used by all for reference use in flows, validation rules, and/or formulas. Use of this eliminates the need to create one-off custom metadata types or custom settings that may have a very limited purpose.</description>
    <label>Generic Configuration Reference</label>
    <pluralLabel>Generic Configuration References</pluralLabel>
</CustomObject>