force-app/main/default/objects/Generic_Configuration_Reference__mdt/fields/Boolean_Value__c.field-meta.xml
<CustomField>
    <fullName>Boolean_Value__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Stores a Boolean criteria</description>
    <label>Boolean Value</label>
    <type>Checkbox</type>
</CustomField>