force-app/main/default/objects/Generic_Configuration_Reference__mdt/fields/Config_Item__c.field-meta.xml
<CustomField>
    <fullName>Config_Item__c</fullName>
    <defaultValue>&quot;Multiple Uses&quot;</defaultValue>
    <description>Specifies the configuration item the CMDT is referenced in.</description>
    <inlineHelpText>Specify the configuration item the CMDT is referenced in.</inlineHelpText>
    <label>Config Item</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Apex</fullName>
                <default>true</default>
                <label>Apex</label>
            </value>
            <value>
                <fullName>Flow</fullName>
            </value>
            <value>
                <fullName>Formula</fullName>
            </value>
            <value>
                <fullName>Multiple Uses</fullName>
            </value>
            <value>
                <fullName>Validation Rule</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>