force-app/main/default/objects/Generic_Configuration_Reference__mdt/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <defaultValue>&quot;USA&quot;</defaultValue>
    <description>For which country(s) the configuration record applies to.</description>
    <label>Country</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Canada</fullName>
                <default>true</default>
                <label>Canada</label>
            </value>
            <value>
                <fullName>USA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>