force-app/main/default/objects/Generic_Configuration_Reference__mdt/fields/Decimal_Value__c.field-meta.xml
<CustomField>
    <fullName>Decimal_Value__c</fullName>
    <description>Stores a decimal criteria.</description>
    <label>Decimal Value</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>