force-app/main/default/objects/Generic_Configuration_Reference__mdt/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description for the purpose of your record.</description>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>