force-app/main/default/objects/Generic_Configuration_Reference__mdt/fields/Number_Value__c.field-meta.xml
<CustomField>
    <fullName>Number_Value__c</fullName>
    <description>Stores a number criteria.</description>
    <label>Number Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>