force-app/main/default/objects/Generic_Configuration_Reference__mdt/fields/Text_Area_Long_Value__c.field-meta.xml
<CustomField>
    <fullName>Text_Area_Long_Value__c</fullName>
    <description>Text requiring a long text area.</description>
    <label>Text Area Long Value</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>