force-app/main/default/objects/Generic_Configuration_Reference__mdt/fields/Text_Value__c.field-meta.xml
<CustomField>
    <fullName>Text_Value__c</fullName>
    <description>Stores a text criteria.</description>
    <label>Text Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>