force-app/main/default/objects/Generic_Configuration_Reference__mdt/listViews/Canada_Inactive_Configuration.listView-meta.xml
<ListView>
    <fullName>Canada_Inactive_Configuration</fullName>
    <columns>DeveloperName</columns>
    <columns>Description__c</columns>
    <columns>Config_Item__c</columns>
    <columns>Text_Value__c</columns>
    <columns>Boolean_Value__c</columns>
    <columns>Number_Value__c</columns>
    <columns>Decimal_Value__c</columns>
    <columns>Text_Area_Long_Value__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Country__c</field>
        <operation>equals</operation>
        <value>Canada</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Inactive</value>
    </filters>
    <label>Canada Inactive Configuration</label>
    <language>en_US</language>
</ListView>